--- a/src/components/AppList/applist.scss
+++ b/src/components/AppList/applist.scss
@@ -26,6 +26,13 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   margin-top: 20px;
+  &__loader{
+    font-size: 25px;
+    line-height: 28px;
+    color:#FFFFFF;
+    text-align: right;
+    margin: 20px 0 0 0 ;
+  }
 }
 .pagination {
   background: none;
